--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,7 @@ spring.datasource.username= root
 spring.datasource.password= password
 spring.datasource.driver-class-name= com.mysql.cj.jdbc.Driver
 # Hibernate ddl auto (create, create-drop, validate, update)
-spring.jpa.hibernate.ddl-auto= update
+spring.jpa.hibernate.ddl-auto= create-drop
 # show queries on console
 spring.jpa.show-sql=true
 spring.main.allow-circular-references=true
